SERVER-35652 Duplicate registrations should only trigger one metrics upload stream

(cherry picked from commit 99d48121c5bb18168eb08b20201065170a1d7213)